# bib-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bibcleaner/: __init__.py  bibcleaner.py  cli.py  enricher.py  openalex.py
providers/: __init__.py  arxiv.py  crossref.py  dblp.py  openalex.py  provider.py  semanticscholar.py
