[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bib-cleaner"
version = "0.1.0"
authors = [
  { name="Hamada Zahera" }
]
description = "Python toolkit for automated BibTeX metadata enrichment using Semantic Scholar API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "bibtexparser==2.0.0b9",
    "tqdm>=4.65.0"
]

[project.scripts]
bibcleaner = "bibcleaner.cli:main"

[tool.setuptools]
packages = ["bibcleaner", "providers"]